--- a/dev/replica_count.yaml
+++ b/dev/replica_count.yaml
@@ -2,6 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
 # change the name 
-  name: kustomize-ilenderload
+  name: ilender-loan
 spec:
   replicas: 1
