--- a/dev/kustomization.yaml
+++ b/dev/kustomization.yaml
@@ -1,5 +1,8 @@
+  apiVersion: kustomize.config.k8s.io/v1beta1
+  kind: Kustomization
+  
   bases:
-    - ../base
+    -  ../base
   namespace: ilender-dev-ns
   patches:
     - replica_count.yaml
