change to LoadBalancer from NodePort

--- a/base/21-deployable-frontweb.yaml
+++ b/base/21-deployable-frontweb.yaml
@@ -39,12 +39,11 @@ metadata:
     app: ilender-application
     subname: frontweb
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
     - name: my-http
       port: 9090
       targetPort: my-http
-      nodePort: 30501
   selector:
     app: ilender-application
     subname: frontweb
